[gd_scene load_steps=2 format=2]

[ext_resource path="res://characters/AttackBox.gd" type="Script" id=1]

[node name="AttackBox" type="Area2D"]
collision_layer = 0
collision_mask = 32
script = ExtResource( 1 )
[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
